Add 1st failing test for 1st test-case
#test-case id: 123

--- a/src/TemperatureAlert.Domain.Abstractions/TemperatureAlert.Domain.Abstractions.csproj
+++ b/src/TemperatureAlert.Domain.Abstractions/TemperatureAlert.Domain.Abstractions.csproj
@@ -2,6 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <RootNamespace>TemperatureAlert.Domain</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Service\" />
+  </ItemGroup>
 
 </Project>
